Fixed alt-border ipad visibility

--- a/css/my-app.css
+++ b/css/my-app.css
@@ -627,10 +627,6 @@ footer{
 		margin: 0;
 	}
 
-	.alt-border{
-		border: none;
-	}
-
 	footer{
 		height: 40%;
 	}
